test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-17.xq
(:**foo* eq *************** $ ********* let *** let *** let ******* let ******* eq ***: let )(: Test: K-ForExprPositionalVar-17  eq                       :)
( for : Written by:Frans Englich          where     for                 ne  :)
(: Date: 2006-10-05T18:29:37+02:00                   let    :)
(: Purpose: Verify that the position is computed for fn:remove() where . :)
 for (:********* eq ****************** where ****************************: where )
deep-equal((1,  3), where 
	    for$i foo eq at $p
	    inremove(1, 2, 3, current-time( where )), 2)
	   return $p)